fix video spacing

--- a/ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-base/css/richtext.css
+++ b/ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-base/css/richtext.css
@@ -206,7 +206,7 @@
 
 /* padding for button is 25 px in desktop, its different for mobile and tablet*/
 .contentBand .row .link-wrapper {
-    padding-top: 25px;
+    margin-top: 25px;
 }
 
 .contentBand .row img {
@@ -219,7 +219,7 @@
         padding-bottom: 51px;
     }
     .contentBand .row .link-wrapper {
-        padding-top: 22px;
+        margin-top: 22px;
     }
 }
 
@@ -229,7 +229,7 @@
         padding-bottom: 38px;
     }
     .contentBand .row .link-wrapper {
-            padding-top: 53px;
+            margin-top: 53px;
     }
 }
 
